@@ -33,6 +33,7 @@ enum dpx_mode {
 extern struct _dpx_conf {
   int            verbose_level;
   enum dpx_mode  compat_mode;
+  int            ignore_font_license;
   struct {
     int keep_cache;
   } file;
